# crabattery

./: .gitignore  Cargo.toml  Makefile  README.md  justfile  setup-resources.sh
crabattery/: Cargo.toml
crabattery-server/: Cargo.toml
crabattery-server/src/: main.rs
crabattery/src/: main.rs
resources/: ar.claaj.Crabattery.conf  ar.claaj.Rusttery.conf  crabattery.service  rusttery.service
rusttery/: Cargo.toml
rusttery-server/: Cargo.toml
rusttery-server/src/: main.rs
rusttery/src/: main.rs
