[package]
name = "rusttery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
menu_rs = "0.3.0"
tokio = { version = "1.25.0", features = ["full"] }
zbus = { version = "3", default-features = false, features = ["tokio"] }